@@ -1,3 +1,8 @@
+May 13, 2010 edgbla <edgbla@yandex.ru>
+
+ * libpcsxcore/plugins.h: CDRgetBufferSub for internal cdr plugin.
+ * libpcsxcore/plugins.c: Likewise.
+
 May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * plugins/dfnet/gui.c: Get the correct address under GNU/Linux.
